--- a/src/Deploy/Ghost.nuspec
+++ b/src/Deploy/Ghost.nuspec
@@ -27,6 +27,7 @@
     <file src="Owin.dll" target="bin" />
     <file src="Gate.Hosts.*.dll" target="bin" />
     <file src="Kayak.dll" target="bin" />
+    <file src="Firefly.dll" target="bin" />
     <file src="Manos.dll" target="bin" />
     <file src="Manos.IO.dll" target="bin" />
     <file src="Mono.C5.dll" target="bin" />
