--- a/src/Hosts/Gate.Hosts.Firefly/Gate.Hosts.Firefly.csproj
+++ b/src/Hosts/Gate.Hosts.Firefly/Gate.Hosts.Firefly.csproj
@@ -2,22 +2,20 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A15DD7AD-5930-4B76-8011-BBD1B1CC54DE}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{53619873-BED3-41F6-8B33-552E0B53FC1C}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ghost</RootNamespace>
-    <AssemblyName>Ghost</AssemblyName>
+    <RootNamespace>Gate.Hosts.Firefly</RootNamespace>
+    <AssemblyName>Gate.Hosts.Firefly</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\..\Gate\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -26,8 +24,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -36,33 +33,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="ServerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Hosts\Gate.Hosts.Firefly\Gate.Hosts.Firefly.csproj">
-      <Project>{53619873-BED3-41F6-8B33-552E0B53FC1C}</Project>
-      <Name>Gate.Hosts.Firefly</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Hosts\Gate.Hosts.HttpListener\Gate.Hosts.HttpListener.csproj">
-      <Project>{A1A94BF6-7E05-430E-947D-B046A2A00CAF}</Project>
-      <Name>Gate.Hosts.HttpListener</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Hosts\Gate.Hosts.Kayak\Gate.Hosts.Kayak.csproj">
-      <Project>{D96E8CF9-C2A5-4A35-814C-0B4FE9828B26}</Project>
-      <Name>Gate.Hosts.Kayak</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Hosts\Gate.Hosts.Manos\Gate.Hosts.Manos.csproj">
-      <Project>{A3C2FFB6-663E-4C94-884A-41ADB22DB724}</Project>
-      <Name>Gate.Hosts.Manos</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Ghost.Engine\Ghost.Engine.csproj">
-      <Project>{C225EB2E-E7A7-463F-B058-1705F204978E}</Project>
-      <Name>Ghost.Engine</Name>
-    </ProjectReference>
+    <Reference Include="Firefly">
+      <HintPath>..\..\..\packages\Firefly.0.3\lib\net40\Firefly.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\..\..\packages\Owin.0.7\lib\net40\Owin.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
