--- a/src/Hosts/Gate.Hosts.AspNet/Gate.Hosts.AspNet.csproj
+++ b/src/Hosts/Gate.Hosts.AspNet/Gate.Hosts.AspNet.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\..\..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="Owin">
       <HintPath>..\..\..\packages\Owin.0.7\lib\net40\Owin.dll</HintPath>
     </Reference>
@@ -51,6 +55,7 @@
     <Compile Include="AppHandlerSingleton.cs" />
     <Compile Include="Handler.cs" />
     <Compile Include="Module.cs" />
+    <Compile Include="PreApplicationStart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
