--- a/src/Samples/Sample.AspNet/Web.config
+++ b/src/Samples/Sample.AspNet/Web.config
@@ -7,22 +7,7 @@
 	</system.web>
 
 	<system.webServer>
-    <!-- 
-      Configuring for Gate.Hosts.AspNet.Module for AppDomain.
-      This bypasses the normal native/managed module pipeline.
-      -->
-
-    <!--<modules runAllManagedModulesForAllRequests="true">
-			<add name="Gate" type="Gate.Hosts.AspNet.Module, Gate.AspNet" />
-		</modules>-->
-
-    <!-- 
-      Configuring for Gate.Hosts.AspNet.Handler for all requests.
-      This also allows existing modules to run. 
-      -->
-    <handlers>
-      <add name="Gate" path="*" verb="*" type="Gate.Hosts.AspNet.Handler, Gate.Hosts.AspNet" />
-    </handlers>
+    <modules runAllManagedModulesForAllRequests="true"/>
 	</system.webServer>
 
 </configuration>
