--- a/src/Hosts/Gate.Hosts.Firefly/Gate.Hosts.Firefly.csproj
+++ b/src/Hosts/Gate.Hosts.Firefly/Gate.Hosts.Firefly.csproj
@@ -37,8 +37,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Firefly">
-      <HintPath>..\..\..\packages\Firefly.0.3\lib\net40\Firefly.dll</HintPath>
+    <Reference Include="Firefly, Version=0.4.0.0, Culture=neutral, PublicKeyToken=1d0e30769d803c61, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\Firefly.0.4\lib\net40\Firefly.dll</HintPath>
     </Reference>
     <Reference Include="Owin">
       <HintPath>..\..\..\packages\Owin.0.7\lib\net40\Owin.dll</HintPath>
