--- a/src/Deploy/Gate.Quickstart.SignalR.nuspec
+++ b/src/Deploy/Gate.Quickstart.SignalR.nuspec
@@ -16,6 +16,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="Quickstart.Core\**" target="content" />
+    <file src="Quickstart.SignalR\**" target="content" />
   </files>
 </package>
