--- a/src/Deploy/Gate.Quickstart.All.nuspec
+++ b/src/Deploy/Gate.Quickstart.All.nuspec
@@ -14,6 +14,7 @@
       <dependency id="Gate.Quickstart.AspNetWebApi" version="$version$"/>
       <dependency id="Gate.Quickstart.Direct" version="$version$"/>
       <dependency id="Gate.Quickstart.Nancy" version="$version$"/>
+      <dependency id="Gate.Quickstart.SignalR" version="$version$"/>
       <dependency id="Gate.Quickstart.Wilson" version="$version$"/>
     </dependencies>
   </metadata>
