--- a/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
+++ b/src/Tests/Gate.Middleware.Tests/Gate.Middleware.Tests.csproj
@@ -70,6 +70,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicAuthTests.cs" />
     <Compile Include="StaticFiles\BodyStreamTests.cs" />
     <Compile Include="ContentLengthTests.cs" />
     <Compile Include="StaticFiles\FileServerTests.cs" />
