Updates for crossplatform build

--- a/src/Deploy/Deploy.csproj
+++ b/src/Deploy/Deploy.csproj
@@ -14,7 +14,7 @@
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\Gate\</SolutionDir>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
     <PackageVersion Condition="$(PackageVersion) == '' Or $(PackageVersion) == '*Undefined*'">0.2.0</PackageVersion>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
@@ -207,7 +207,7 @@
     <ItemGroup>
       <NuspecFiles Include="*.nuspec" />
     </ItemGroup>
-    <Exec Command="$(ProjectDir)..\..\.nuget\nuget.exe pack %(NuspecFiles.Identity) -Version $(PackageVersion) -Properties &quot;id=%(NuspecFiles.Filename);authors=HTTP Abstractions Working Group&quot;" WorkingDirectory="$(OutputPath)" />
+    <Exec Command="$(ProjectDir)..\..\.nuget\NuGet.exe pack %(NuspecFiles.Identity) -Version $(PackageVersion) -Properties &quot;id=%(NuspecFiles.Filename);authors=HTTP Abstractions Working Group&quot;" WorkingDirectory="$(OutputPath)" />
   </Target>
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" />
 </Project>
