--- a/src/Deploy/Gate.Adapters.AspNetWebApi.nuspec
+++ b/src/Deploy/Gate.Adapters.AspNetWebApi.nuspec
@@ -11,9 +11,11 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="AspNetWebApi.Core" version="4.0.20126.16343" />
       <dependency id="Owin" version="0.7" />
-      <dependency id="System.Json" version="4.0.20126.16343" />
+      <dependency id="Microsoft.AspNet.WebApi.Client" version="4.0.20516.0" />
+      <dependency id="Microsoft.AspNet.WebApi.Core" version="4.0.20516.0" />
+      <dependency id="Microsoft.Net.Http" version="2.0.20516.0" />
+      <dependency id="Newtonsoft.Json" version="4.5.5" />
     </dependencies>
   </metadata>
   <files>
