--- a/src/Hosts/Gate.Hosts.Firefly/Gate.Hosts.Firefly.csproj
+++ b/src/Hosts/Gate.Hosts.Firefly/Gate.Hosts.Firefly.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ExecutionContextPerRequest.cs" />
     <Compile Include="ServerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
