--- a/src/Hosts/Gate.Hosts.Kayak/Gate.Hosts.Kayak.csproj
+++ b/src/Hosts/Gate.Hosts.Kayak/Gate.Hosts.Kayak.csproj
@@ -45,6 +45,7 @@
     <Compile Include="DataConsumer.cs" />
     <Compile Include="DataProducer.cs" />
     <Compile Include="Disposable.cs" />
+    <Compile Include="ExecutionContextPerRequest.cs" />
     <Compile Include="GateRequestDelegate.cs" />
     <Compile Include="HttpServerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
