Creating .Sources NuGet packages for several projects
Gate may be used as Gate.Sources
Gate.MiddleWare may be used as Gate.Middleware.Sources
Gate.Builder may be used as Gate.Builder.Sources

public classes and enums are changed to internal

--- a/src/Main/Gate.Builder/Gate.Builder.csproj
+++ b/src/Main/Gate.Builder/Gate.Builder.csproj
@@ -47,6 +47,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Gate.Builder.Sources.nuspec">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Gate.Builder.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
