Enabling Gate.Hosts.AspNet to work in a passive mode
Updates appSettings config values to be two distinct values

Gate.AspNet.SetCurrentDirectory will change the current directy to
match the web app's physical directory

Gate.AspNet.HandleAllRequests will disable the default behavior to
handle all incoming requests

RouteCollection.AddOwinRoute(path) will direct only a prefixed portion
of the incoming requests onto the AppSingleton.Instance app

--- a/src/Hosts/Gate.Hosts.AspNet/Gate.Hosts.AspNet.csproj
+++ b/src/Hosts/Gate.Hosts.AspNet/Gate.Hosts.AspNet.csproj
@@ -52,11 +52,14 @@
       <Link>PipeResponse.cs</Link>
     </Compile>
     <Compile Include="AppHandler.cs" />
-    <Compile Include="AppHandlerSingleton.cs" />
-    <Compile Include="Handler.cs" />
-    <Compile Include="Module.cs" />
+    <Compile Include="AppSingleton.cs" />
+    <Compile Include="OwinHandler.cs" />
+    <Compile Include="OwinModule.cs" />
+    <Compile Include="OwinRoute.cs" />
+    <Compile Include="OwinRouteHandler.cs" />
     <Compile Include="PreApplicationStart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RouteCollectionExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Main\Gate.Builder\Gate.Builder.csproj">
