--- a/src/Deploy/Deploy.csproj
+++ b/src/Deploy/Deploy.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="Hosts.AspNet\Web.config" />
     <None Include="Quickstart.All\Example-Startup-All.cs.pp">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
