--- a/src/Deploy/Gate.Hosts.AspNet.nuspec
+++ b/src/Deploy/Gate.Hosts.AspNet.nuspec
@@ -18,5 +18,6 @@
   </metadata>
   <files>
     <file src="Gate.Hosts.AspNet.dll" target="lib\net40" />
+    <file src="Hosts.AspNet\**" target="content" />
   </files>
 </package>
