--- a/src/Adapters/Gate.Adapters.Nancy/packages.config
+++ b/src/Adapters/Gate.Adapters.Nancy/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Nancy" version="0.11.0" />
-  <package id="Owin" version="0.7" />
+  <package id="Owin" version="0.8-ctp1" />
 </packages>
