--- a/src/Hosts/Gate.Hosts/Gate.Hosts.csproj
+++ b/src/Hosts/Gate.Hosts/Gate.Hosts.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Owin">
-      <HintPath>..\..\..\packages\Owin.0.7\lib\net40\Owin.dll</HintPath>
+      <HintPath>..\..\..\packages\Owin.0.8-ctp1\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
