--- a/src/Main/Gate.Middleware/packages.config
+++ b/src/Main/Gate.Middleware/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Owin" version="0.7" />
+  <package id="Owin" version="0.8-ctp1" />
 </packages>
