--- a/src/Samples/Sample.Nancy/Sample.Nancy.csproj
+++ b/src/Samples/Sample.Nancy/Sample.Nancy.csproj
@@ -42,8 +42,9 @@
     <Reference Include="Nancy.ViewEngines.Spark">
       <HintPath>..\..\..\packages\Nancy.Viewengines.Spark.0.9.0\lib\net40\Nancy.ViewEngines.Spark.dll</HintPath>
     </Reference>
-    <Reference Include="Owin, Version=0.7.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
-      <HintPath>..\..\..\packages\Owin.0.7\lib\net40\Owin.dll</HintPath>
+    <Reference Include="Owin, Version=0.8.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\packages\Owin.0.8-ctp1\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="Spark">
       <HintPath>..\..\..\packages\Spark.1.5.1\lib\NET40\Spark.dll</HintPath>
