--- a/src/Tests/Gate.Hosts.AspNet.Tests/packages.config
+++ b/src/Tests/Gate.Hosts.AspNet.Tests/packages.config
@@ -3,5 +3,5 @@
   <package id="Castle.Core" version="2.5.2" />
   <package id="FakeItEasy" version="1.7.4257.42" />
   <package id="NUnit" version="2.5.10.11092" />
-  <package id="Owin" version="0.7" />
+  <package id="Owin" version="0.8-ctp1" />
 </packages>
