--- a/src/Tests/Gate.Hosts.Kayak.Tests/packages.config
+++ b/src/Tests/Gate.Hosts.Kayak.Tests/packages.config
@@ -3,5 +3,5 @@
   <package id="HttpMachine" version="0.9.0.0" />
   <package id="Kayak" version="0.7.2" />
   <package id="NUnit" version="2.5.10.11092" />
-  <package id="Owin" version="0.7" />
+  <package id="Owin" version="0.8-ctp1" />
 </packages>
