--- a/src/Hosts/Gate.Hosts.Kayak/Gate.Hosts.Kayak.csproj
+++ b/src/Hosts/Gate.Hosts.Kayak/Gate.Hosts.Kayak.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\Main\Gate\OwinConstants.cs">
+      <Link>OwinConstants.cs</Link>
+    </Compile>
     <Compile Include="DataConsumer.cs" />
     <Compile Include="DataProducer.cs" />
     <Compile Include="Disposable.cs" />
