--- a/src/Tests/Gate.Hosts.HttpListener.Tests/Gate.Hosts.HttpListener.Tests.csproj
+++ b/src/Tests/Gate.Hosts.HttpListener.Tests/Gate.Hosts.HttpListener.Tests.csproj
@@ -55,6 +55,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\Main\Gate\OwinConstants.cs">
+      <Link>OwinConstants.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerTests.cs" />
     <Compile Include="Startup.cs" />
