Finished making the signature changes
All tests pass - aspnet sample app appears to be working

--- a/src/Tests/Gate.Hosts.Manos.Tests/Gate.Hosts.Manos.Tests.csproj
+++ b/src/Tests/Gate.Hosts.Manos.Tests/Gate.Hosts.Manos.Tests.csproj
@@ -58,6 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\Main\Gate\OwinConstants.cs">
+      <Link>OwinConstants.cs</Link>
+    </Compile>
     <Compile Include="ServerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
