--- a/src/Deploy/Gate.Hosts.AspNet.nuspec
+++ b/src/Deploy/Gate.Hosts.AspNet.nuspec
@@ -12,7 +12,7 @@
     <tags></tags>
     <dependencies>
       <dependency id="Gate.Builder" version="$version$"/>
-      <dependency id="Owin" version="0.7.0"/>
+      <dependency id="Owin" version="0.8.0-ctp1"/>
       <dependency id="Microsoft.Web.Infrastructure" version="1.0.0.0"/>
     </dependencies>
   </metadata>
