Enhancing Request and Response utility classes
Adding built-in request and response stream abstractions
Giving Response knowledge of standard Reason Phrases

--- a/src/Main/Gate/Gate.csproj
+++ b/src/Main/Gate/Gate.csproj
@@ -50,6 +50,8 @@
     <Compile Include="AppBuilderUseExtensions.cs" />
     <Compile Include="Environment.cs" />
     <Compile Include="OwinConstants.cs" />
+    <Compile Include="RequestStream.cs" />
+    <Compile Include="ResponseStream.cs" />
     <Compile Include="Utils\ParamDictionary.cs" />
     <Compile Include="Utils\Spool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
