Managing versions more explicitly
Bumping to 0.5.0
Making nuget version refs explicit, e.g. [0.8-ctp1], to ensure gate
components are referenced as an atomic set. This is a workaround for
a nuget behavior which will automatically upgrade references to the
highest version available in the same major.minor group

--- a/src/Deploy/Gate.Hosts.AspNet.nuspec
+++ b/src/Deploy/Gate.Hosts.AspNet.nuspec
@@ -11,8 +11,8 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="Gate.Builder" version="$version$"/>
-      <dependency id="Owin" version="0.8.0-ctp1"/>
+      <dependency id="Gate.Builder" version="[$version$]"/>
+      <dependency id="Owin" version="[0.8-ctp1]"/>
       <dependency id="Microsoft.Web.Infrastructure" version="1.0.0.0"/>
     </dependencies>
   </metadata>
