--- a/src/Deploy/Gate.Quickstart.AspNetWebApi.nuspec
+++ b/src/Deploy/Gate.Quickstart.AspNetWebApi.nuspec
@@ -11,8 +11,8 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="Gate.Quickstart.Core" version="$version$"/>
-      <dependency id="Gate.Adapters.AspNetWebApi" version="$version$"/>
+      <dependency id="Gate.Quickstart.Core" version="[$version$]"/>
+      <dependency id="Gate.Adapters.AspNetWebApi" version="[$version$]"/>
     </dependencies>
   </metadata>
   <files>
