--- a/src/Adapters/Gate.Adapters.AspNetWebApi/Gate.Adapters.AspNetWebApi.csproj
+++ b/src/Adapters/Gate.Adapters.AspNetWebApi/Gate.Adapters.AspNetWebApi.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResponseHttpStream.cs" />
     <Compile Include="StreamNotImpl.cs" />
