--- a/src/Deploy/Gate.Hosts.Kayak.nuspec
+++ b/src/Deploy/Gate.Hosts.Kayak.nuspec
@@ -11,7 +11,7 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="Owin" version="0.8.0-ctp1"/>
+      <dependency id="Owin" version="[0.8-ctp1]"/>
       <dependency id="Kayak" version="0.7.2"/>
     </dependencies>
   </metadata>
