--- a/src/Deploy/Gate.Quickstart.SignalR.nuspec
+++ b/src/Deploy/Gate.Quickstart.SignalR.nuspec
@@ -11,7 +11,7 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="Gate.Quickstart.Core" version="$version$"/>
+      <dependency id="Gate.Quickstart.Core" version="[$version$]"/>
       <dependency id="SignalR.Hosting.Owin" version="0.4.0.0"/>
     </dependencies>
   </metadata>
