--- a/src/Hosts/Gate.Hosts.AspNet/Gate.Hosts.AspNet.csproj
+++ b/src/Hosts/Gate.Hosts.AspNet/Gate.Hosts.AspNet.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="..\..\Main\Gate\OwinConstants.cs">
       <Link>OwinConstants.cs</Link>
     </Compile>
