--- a/src/Hosts/Gate.Hosts.Firefly/Gate.Hosts.Firefly.csproj
+++ b/src/Hosts/Gate.Hosts.Firefly/Gate.Hosts.Firefly.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ExecutionContextPerRequest.cs" />
     <Compile Include="ServerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
