--- a/src/Hosts/Gate.Hosts.HttpListener/Gate.Hosts.HttpListener.csproj
+++ b/src/Hosts/Gate.Hosts.HttpListener/Gate.Hosts.HttpListener.csproj
@@ -47,6 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="..\..\Main\Gate\OwinConstants.cs">
       <Link>OwinConstants.cs</Link>
     </Compile>
