--- a/src/Main/Gate.Helpers/Gate.Helpers.csproj
+++ b/src/Main/Gate.Helpers/Gate.Helpers.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\CommonAssemblyInfo.cs">
+      <Link>Properties\CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="AsyncResult.cs" />
     <Compile Include="InputStream.cs" />
     <Compile Include="OutputStream.cs" />
