Further incremental transition

--- a/src/Hosts/Gate.Hosts.Firefly/Gate.Hosts.Firefly.csproj
+++ b/src/Hosts/Gate.Hosts.Firefly/Gate.Hosts.Firefly.csproj
@@ -36,7 +36,9 @@
     <Compile Include="..\..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="ExecutionContextPerRequest.cs" />
+    <Compile Include="..\Gate.Hosts\ExecutionContextPerRequest.cs">
+      <Link>ExecutionContextPerRequest.cs</Link>
+    </Compile>
     <Compile Include="ServerFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
