Re-paving for OWIN changes
Starting with Gate.Builder

--- a/src/Tests/Gate.Builder.Tests/packages.config
+++ b/src/Tests/Gate.Builder.Tests/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="2.5.10.11092" />
-  <package id="Owin" version="0.9-ctp2" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20628.0" />
+  <package id="Microsoft.Net.Http" version="2.0.20628.0" />
+  <package id="Newtonsoft.Json" version="4.5.7" />
+  <package id="Owin" version="0.10-ctp3" />
+  <package id="Shouldly" version="1.1.1.1" />
+  <package id="TaskHelpers.Sources" version="0.1-ctp1" />
+  <package id="xunit" version="1.9.0.1566" />
 </packages>
