--- a/src/Tests/Gate.TestHelpers/packages.config
+++ b/src/Tests/Gate.TestHelpers/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20525.0" />
-  <package id="Microsoft.Net.Http" version="2.0.20525.0" />
-  <package id="Newtonsoft.Json" version="4.5.5" />
-  <package id="Owin" version="0.9-ctp2" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20628.0" />
+  <package id="Microsoft.Net.Http" version="2.0.20628.0" />
+  <package id="Newtonsoft.Json" version="4.5.7" />
+  <package id="Owin" version="0.10-ctp3" />
+  <package id="TaskHelpers.Sources" version="0.1-ctp1" />
 </packages>
