--- a/src/Adapters/Gate.Adapters.Nancy/packages.config
+++ b/src/Adapters/Gate.Adapters.Nancy/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Nancy" version="0.11.0" />
-  <package id="Owin" version="0.9-ctp2" />
+  <package id="Owin" version="0.11" />
+  <package id="TaskHelpers.Sources" version="0.1-ctp1" />
 </packages>
