--- a/src/Tests/Gate.Builder.Tests/packages.config
+++ b/src/Tests/Gate.Builder.Tests/packages.config
@@ -3,7 +3,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20628.0" />
   <package id="Microsoft.Net.Http" version="2.0.20628.0" />
   <package id="Newtonsoft.Json" version="4.5.7" />
-  <package id="Owin" version="0.11-ctp3" />
+  <package id="Owin" version="0.11" />
   <package id="Shouldly" version="1.1.1.1" />
   <package id="TaskHelpers.Sources" version="0.1-ctp1" />
   <package id="xunit" version="1.9.0.1566" />
