Pulling in Gate.Hosts.Firefly. (Still needs an update to the firefly package to run.) Fixed Gate.Hosts.ErrorPage.

--- a/src/Hosts/Gate.Hosts.HttpListener/Gate.Hosts.HttpListener.csproj
+++ b/src/Hosts/Gate.Hosts.HttpListener/Gate.Hosts.HttpListener.csproj
@@ -53,6 +53,9 @@
     <Compile Include="..\..\Main\Gate\OwinConstants.cs">
       <Link>OwinConstants.cs</Link>
     </Compile>
+    <Compile Include="..\Gate.Hosts\ErrorPage.cs">
+      <Link>ErrorPage.cs</Link>
+    </Compile>
     <Compile Include="App_Packages\TaskHelpers.Sources.0.1\TaskHelpers.cs" />
     <Compile Include="App_Packages\TaskHelpers.Sources.0.1\TaskHelpersExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
