--- a/src/Hosts/Gate.Hosts.Firefly/packages.config
+++ b/src/Hosts/Gate.Hosts.Firefly/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Firefly" version="0.4" />
-  <package id="Owin" version="0.9-ctp2" />
+  <package id="Owin" version="0.11" />
+  <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
