--- a/src/Samples/Sample.AspNetWebApi/packages.config
+++ b/src/Samples/Sample.AspNetWebApi/packages.config
@@ -4,5 +4,5 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20516.0" />
   <package id="Microsoft.Net.Http" version="2.0.20516.0" />
   <package id="Newtonsoft.Json" version="4.5.5" />
-  <package id="Owin" version="0.9-ctp2" />
+  <package id="Owin" version="0.11" />
 </packages>
