--- a/src/Samples/Sample.Nancy/Sample.Nancy.csproj
+++ b/src/Samples/Sample.Nancy/Sample.Nancy.csproj
@@ -42,9 +42,9 @@
     <Reference Include="Nancy.ViewEngines.Spark">
       <HintPath>..\..\..\packages\Nancy.Viewengines.Spark.0.9.0\lib\net40\Nancy.ViewEngines.Spark.dll</HintPath>
     </Reference>
-    <Reference Include="Owin, Version=0.9.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
+    <Reference Include="Owin, Version=0.11.0.0, Culture=neutral, PublicKeyToken=f585506a2da1fef4, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Owin.0.9-ctp2\lib\net40\Owin.dll</HintPath>
+      <HintPath>..\..\..\packages\Owin.0.11\lib\net40\Owin.dll</HintPath>
     </Reference>
     <Reference Include="Spark">
       <HintPath>..\..\..\packages\Spark.1.5.1\lib\NET40\Spark.dll</HintPath>
@@ -103,7 +103,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349C5851-65DF-11DA-9384-00065B846F21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51594</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
