--- a/src/Adapters/Gate.Adapters.Nancy/packages.config
+++ b/src/Adapters/Gate.Adapters.Nancy/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Nancy" version="0.11.0" />
   <package id="Owin" version="0.11" />
-  <package id="TaskHelpers.Sources" version="0.1-ctp1" />
+  <package id="TaskHelpers.Sources" version="0.1" />
 </packages>
