--- a/src/Main/Gate.Middleware/Gate.Middleware.csproj
+++ b/src/Main/Gate.Middleware/Gate.Middleware.csproj
@@ -45,8 +45,8 @@
     <Compile Include="..\..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="App_Packages\TaskHelpers.Sources.0.1-ctp1\TaskHelpers.cs" />
-    <Compile Include="App_Packages\TaskHelpers.Sources.0.1-ctp1\TaskHelpersExtensions.cs" />
+    <Compile Include="App_Packages\TaskHelpers.Sources.0.1\TaskHelpers.cs" />
+    <Compile Include="App_Packages\TaskHelpers.Sources.0.1\TaskHelpersExtensions.cs" />
     <Compile Include="NotFound.cs" />
     <Compile Include="OwinConstants.cs" />
     <Compile Include="StaticFiles\FileBody.cs" />
