--- a/src/Main/Gate/Gate.Sources.nuspec
+++ b/src/Main/Gate/Gate.Sources.nuspec
@@ -11,8 +11,8 @@
     <licenseUrl>https://github.com/owin/gate/blob/master/LICENSE.txt</licenseUrl>
     <tags></tags>
     <dependencies>
-      <dependency id="Owin" version="[0.11-ctp3]"/>
-      <dependency id="TaskHelpers.Sources" version="[0.1-ctp1]"/>
+      <dependency id="Owin" version="[0.11]"/>
+      <dependency id="TaskHelpers.Sources" version="[0.1]"/>
     </dependencies>
   </metadata>
   <files>
